# gym-trading

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
examples/: advanced_usage.ipynb  creating_environment.py  v2test.ipynb
gym_trading/: __init__.py
gym_trading/datasets/: __init__.py
gym_trading/envs/: __init__.py  trading_env.py
src/gym_trading/: __init__.py
src/gym_trading/datasets/: BITCOIN_USD_1H.csv  __init__.py  datasets.py
src/gym_trading/datasets/data/: BITCOIN_USD_1H.csv
src/gym_trading/envs/: __init__.py  base_env.py  mixed_env.py  trading_env.py  trading_env_v2.py  trading_env_v3.py
src/gym_trading/wrappers/: __init__.py  wrappers.py
tests/: benchmark.py  test_datasets.py  test_envs.py  test_envs_fork.py
